[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/GameMain/Guntret/MiniGuntret.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/GameMain/Guntret/RestGuntret.gd" type="Script" id=2]

[node name="RestGuntretCtrl" type="Node2D"]
script = ExtResource( 2 )

[node name="sp01" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -1 )

[node name="sp02" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, -1 )

[node name="sp03" parent="." instance=ExtResource( 1 )]
position = Vector2( 20, -1 )

[node name="sp04" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, -1 )

[node name="sp05" parent="." instance=ExtResource( 1 )]
position = Vector2( 40, -1 )

[node name="sp06" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, -1 )

[node name="sp07" parent="." instance=ExtResource( 1 )]
position = Vector2( 60, -1 )

[node name="sp08" parent="." instance=ExtResource( 1 )]
position = Vector2( 70, -1 )
